fixing messed up param drops, outsourceing some other vars

--- a/deploy.toml
+++ b/deploy.toml
@@ -14,4 +14,8 @@ keys = [
     "/PolicyDefinitionDisplayName",
     "/PolicyAssignementName",
     "/EnabledResourceTypes",
+    "/StorageFileEncryption",
+    "/StorageBlobEncryption",
+    "/SKU",
+
 ]
